--- a/index.html
+++ b/index.html
@@ -11809,7 +11809,7 @@ div#notebook {
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="Destination-#1:-Data-Collection">Destination #1: Data Collection<a class="anchor-link" href="#Destination-#1:-Data-Collection">&#182;</a></h2><p>We have a couple of datasets: our trips dataset, and our station dataset. Let us load and view our data.</p>
+<h2 id="Destination-#1:-Data-Collection">Destination #1: Data Collection<a class="anchor-link" href="#Destination-#1:-Data-Collection">&#182;</a></h2><p>We have a handful of datasets: our trips dataset, and our station dataset, and a weather dataset. Let us load and view our data.</p>
 <h4 id="Divvybike-Trips-Dataset,-from-Divvybikes.com">Divvybike Trips Dataset, from <a href="https://www.divvybikes.com/system-data">Divvybikes.com</a><a class="anchor-link" href="#Divvybike-Trips-Dataset,-from-Divvybikes.com">&#182;</a></h4>
 </div>
 </div>
@@ -13400,7 +13400,8 @@ memory usage: 67.5+ KB
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="Conclusion">Conclusion<a class="anchor-link" href="#Conclusion">&#182;</a></h2><h4 id="Questions-to-consider-about-bikesharing-data">Questions to consider about bikesharing data<a class="anchor-link" href="#Questions-to-consider-about-bikesharing-data">&#182;</a></h4><ul>
+<h2 id="Conclusion">Conclusion<a class="anchor-link" href="#Conclusion">&#182;</a></h2><p>As you can see from the opening image of this tutorial, the data lifecycle involves a constant feedback loop. During the creation of this tutorial, I continuously re-evaluated the data I used, tidied data, explored different ideas with the data, and collected more data. Still, I try my best to distill the tutorial into five distinct parts. Anyone who applies the concepts of this tutorial to another dataset will learn that the feedback loops are inevitable. The back-and-forth of the data lifecycle makes data science feel like a good book. Where will the data take us next? What will we discover?</p>
+<h4 id="Questions-to-consider-about-bikesharing-data">Questions to consider about bikesharing data<a class="anchor-link" href="#Questions-to-consider-about-bikesharing-data">&#182;</a></h4><ul>
 <li>Do riders go the same distances at different speeds, on average, based on different peak times of the day? </li>
 <li>Does elevation in Chicago affect the direction of travel? Is there a higher demand for and a shortage of bikes at elevated docks, and a lower demand and surplus of bikes at lower elevation docks? (Who are we kidding? This is the flat Midwest.)</li>
 <li>Why so many men in their 30s? What is their race and their occupation? What motivates them over other demographics to choose the Divvybike commute? </li>
