--- a/index.html
+++ b/index.html
@@ -12445,7 +12445,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea ">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f629f797b70&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f6d31b60c18&gt;</pre>
 </div>
 
 </div>
@@ -12797,7 +12797,7 @@ memory usage: 67.5+ KB
 
 
 <div class="output_text output_subarea ">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f629f6c5e48&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f6d31c0cdd8&gt;</pre>
 </div>
 
 </div>
@@ -12843,7 +12843,7 @@ memory usage: 67.5+ KB
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[21]:</div>
+<div class="prompt input_prompt">In&nbsp;[13]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="kn">import</span> <span class="nn">warnings</span>
@@ -12898,108 +12898,81 @@ memory usage: 67.5+ KB
       <th>from_dpcapacity</th>
       <th>to_dpcapacity</th>
       <th>risk_index</th>
-      <th>week</th>
-      <th>weekday_id</th>
-      <th>hour</th>
       <th>gender_id</th>
     </tr>
   </thead>
   <tbody>
     <tr>
       <th>count</th>
-      <td>1.092701e+06</td>
-      <td>1.092701e+06</td>
-      <td>1.092701e+06</td>
-      <td>1.092701e+06</td>
-      <td>1.092701e+06</td>
-      <td>1.092701e+06</td>
-      <td>1.092701e+06</td>
-      <td>1.092701e+06</td>
-      <td>1.092701e+06</td>
+      <td>202349.000000</td>
+      <td>202349.000000</td>
+      <td>202349.000000</td>
+      <td>202349.000000</td>
+      <td>202349.000000</td>
+      <td>202349.000000</td>
     </tr>
     <tr>
       <th>mean</th>
-      <td>8.450054e+02</td>
-      <td>1.977896e+03</td>
-      <td>2.181846e+01</td>
-      <td>2.168827e+01</td>
-      <td>1.216591e-01</td>
-      <td>9.436916e+00</td>
-      <td>3.044887e+00</td>
-      <td>1.382297e+01</td>
-      <td>1.673248e-01</td>
+      <td>785.447667</td>
+      <td>1977.917941</td>
+      <td>21.401119</td>
+      <td>21.408161</td>
+      <td>0.149410</td>
+      <td>0.163999</td>
     </tr>
     <tr>
       <th>std</th>
-      <td>2.010731e+03</td>
-      <td>9.513082e+00</td>
-      <td>7.390583e+00</td>
-      <td>7.424369e+00</td>
-      <td>3.045535e-01</td>
-      <td>3.450487e+00</td>
-      <td>1.858799e+00</td>
-      <td>4.260185e+00</td>
-      <td>3.732658e-01</td>
+      <td>2068.399468</td>
+      <td>9.856960</td>
+      <td>7.187096</td>
+      <td>7.222092</td>
+      <td>0.327597</td>
+      <td>0.370275</td>
     </tr>
     <tr>
       <th>min</th>
-      <td>6.000000e+01</td>
-      <td>1.946000e+03</td>
-      <td>1.100000e+01</td>
-      <td>1.100000e+01</td>
-      <td>0.000000e+00</td>
-      <td>1.000000e+00</td>
-      <td>0.000000e+00</td>
-      <td>0.000000e+00</td>
-      <td>0.000000e+00</td>
+      <td>60.000000</td>
+      <td>1946.000000</td>
+      <td>11.000000</td>
+      <td>11.000000</td>
+      <td>0.000000</td>
+      <td>0.000000</td>
     </tr>
     <tr>
       <th>25%</th>
-      <td>3.590000e+02</td>
-      <td>1.973000e+03</td>
-      <td>1.500000e+01</td>
-      <td>1.500000e+01</td>
-      <td>0.000000e+00</td>
-      <td>7.000000e+00</td>
-      <td>1.000000e+00</td>
-      <td>9.000000e+00</td>
-      <td>0.000000e+00</td>
+      <td>334.000000</td>
+      <td>1973.000000</td>
+      <td>15.000000</td>
+      <td>15.000000</td>
+      <td>0.000000</td>
+      <td>0.000000</td>
     </tr>
     <tr>
       <th>50%</th>
-      <td>5.900000e+02</td>
-      <td>1.978000e+03</td>
-      <td>1.900000e+01</td>
-      <td>1.900000e+01</td>
-      <td>0.000000e+00</td>
-      <td>1.100000e+01</td>
-      <td>3.000000e+00</td>
-      <td>1.600000e+01</td>
-      <td>0.000000e+00</td>
+      <td>542.000000</td>
+      <td>1979.000000</td>
+      <td>19.000000</td>
+      <td>19.000000</td>
+      <td>0.000000</td>
+      <td>0.000000</td>
     </tr>
     <tr>
       <th>75%</th>
-      <td>9.800000e+02</td>
-      <td>1.985000e+03</td>
-      <td>2.700000e+01</td>
-      <td>2.700000e+01</td>
-      <td>0.000000e+00</td>
-      <td>1.200000e+01</td>
-      <td>5.000000e+00</td>
-      <td>1.700000e+01</td>
-      <td>0.000000e+00</td>
+      <td>890.000000</td>
+      <td>1986.000000</td>
+      <td>27.000000</td>
+      <td>27.000000</td>
+      <td>0.000000</td>
+      <td>0.000000</td>
     </tr>
     <tr>
       <th>max</th>
-      <td>8.576600e+04</td>
-      <td>1.998000e+03</td>
-      <td>4.300000e+01</td>
-      <td>4.300000e+01</td>
-      <td>1.000000e+00</td>
-      <td>1.400000e+01</td>
-      <td>6.000000e+00</td>
-      <td>2.300000e+01</td>
-      <td>1.000000e+00</td>
+      <td>85766.000000</td>
+      <td>1998.000000</td>
+      <td>43.000000</td>
+      <td>43.000000</td>
+      <td>1.000000</td>
+      <td>1.000000</td>
     </tr>
   </tbody>
 </table>
@@ -13014,10 +12987,10 @@ memory usage: 67.5+ KB
 
 
 <div class="output_subarea output_stream output_stdout output_text">
-<pre>Median user birthyear: 1978.0
+<pre>Median user birthyear: 1979.0
 Median dock capacity per trip origin: 19.0
 Median dock capacity per trip destination: 19.0
-Median trip duration: 9.83333333333 minutes
+Median trip duration: 9.03333333333 minutes
 </pre>
 </div>
 </div>
@@ -13172,7 +13145,7 @@ Median trip duration: 9.83333333333 minutes
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <p>As we can see, there is a clear demand for bikes during the day on the weekends, and during peak commuting hours during the workweek. What if we also add weather into the picture? Then what can we say about how our data is affected?</p>
-<h4 id="Weather-data">Weather data<a class="anchor-link" href="#Weather-data">&#182;</a></h4><p>Let's take a look at weather trends. Now that we have that dataframe, we will visualize the frequency of safe, mediocre, and dangerous weather in a pie chart. This will help us begin to explore our data.</p>
+<h4 id="Weather-data">Weather data<a class="anchor-link" href="#Weather-data">&#182;</a></h4><p>Let's take a look at weather trends. With our original weather dataset, we will visualize the frequency of safe, mediocre, and dangerous weather in a pie chart. This will help us begin to explore our data.</p>
 
 </div>
 </div>
@@ -13391,6 +13364,7 @@ Median trip duration: 9.83333333333 minutes
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <h2 id="Conclusion">Conclusion<a class="anchor-link" href="#Conclusion">&#182;</a></h2><p>Thank you for reading this tutorial. I hope you have learned something. If you have questions, please contact me!</p>
+<p>The analysis in this tutorial is in no way perfect. The data augmented to the bikeshare data is also in now way perfect. Maybe I will follow up with another tutorial using more robust data from NOAA or data as robust as meteoblue (which is, unfortunately, not free), and I can compare the results of this tutorial's data to an analysis with more robust data. Maybe I will followup with an analysis on elevation data and compare to predictions with elevation benchmark data to predictions with more exact elevation or altitude data.</p>
 <p>As you can see from the opening image of this tutorial, the data lifecycle involves a constant feedback loop. During the creation of this tutorial, I continuously re-evaluated the data I used, tidied data, explored different ideas with the data, and collected more data. Still, I try my best to distill the tutorial into five distinct parts. Anyone who applies the concepts of this tutorial to another dataset will learn that the feedback loops are inevitable. The back-and-forth of the data lifecycle makes data science feel like a good book. Where will the data take us next? What will we discover?</p>
 <h4 id="Questions-to-consider-about-bikesharing-data">Questions to consider about bikesharing data<a class="anchor-link" href="#Questions-to-consider-about-bikesharing-data">&#182;</a></h4><ul>
 <li>Do riders go the same distances at different speeds, on average, based on different peak times of the day? </li>
