--- a/index.html
+++ b/index.html
@@ -12447,7 +12447,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea ">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff46dc1cba8&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f520a680ba8&gt;</pre>
 </div>
 
 </div>
@@ -12707,7 +12707,7 @@ memory usage: 67.5+ KB
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>What are the different types of weather that visit Chicago? We can peek at the different types with <code>groupby('weather').groups.keys()</code>. Then, we can make a dataframe to reflect the frequency of each weather type and assign relative safeties to different weather types for bikers.</p>
+<p>What are the different types of weather that visit Chicago? If you are following along with this tutorial in your own Jupyter notebook, peek at the different types of weather with <code>groupby('weather').groups.keys()</code>. Once you have done that, take a look at how to create a simple dataframe to reflect the frequency of each weather type and to assign relative safeties to different weather types for bikers. We will revisit this soon.</p>
 
 </div>
 </div>
@@ -12807,7 +12807,7 @@ memory usage: 67.5+ KB
 
 
 <div class="output_text output_subarea ">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff46dc09208&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f520a5940f0&gt;</pre>
 </div>
 
 </div>
@@ -13272,15 +13272,6 @@ Median trip duration: 9.03333333333 minutes
 </div>
 
 </div>
-<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
-</div>
-<div class="inner_cell">
-<div class="text_cell_render border-box-sizing rendered_html">
-<p>Note that 'thunderstorm' means there are thunderstorm clouds, but that all rain evaporates before reaching ground level. The sky is only entirely clear in Chicago about 20% of the time, given our data.  Lots of types of rains and snows plague Chicago bikers, and some funky weather like 'dust', 'smoke', and 'squalls' have even tried their hand at this Midwestern city.</p>
-
-</div>
-</div>
-</div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
 <div class="prompt input_prompt">In&nbsp;[18]:</div>
@@ -13352,6 +13343,15 @@ Median trip duration: 9.03333333333 minutes
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <p>Tip: if a color doesn't exist, try putting <code>xkcd:</code> before the rest of the color name.</p>
+<p>Note that 'thunderstorm' means there are thunderstorm clouds, but that all rain evaporates before reaching ground level. The sky is only entirely clear in Chicago about 20% of the time, given our data.  Lots of types of rains and snows plague Chicago bikers, and some funky weather like 'dust', 'smoke', and 'squalls' have even tried their hand at this Midwestern city.</p>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div>
+<div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
 <h2 id="Destination-#4:-Analysis,-Hypothesis-Testing,-and-ML">Destination #4: Analysis, Hypothesis Testing, and ML<a class="anchor-link" href="#Destination-#4:-Analysis,-Hypothesis-Testing,-and-ML">&#182;</a></h2>
 </div>
 </div>
